[package]
name = "elmer"
version = "0.0.1"
edition = "2021"
authors = ["Jacobtread <jacobtread@gmail.com>"]
license = "MIT"
repository = "https://github.com/jacobtread/elmer"
readme = "README.md"
keywords = ["Compiler"]
description = "Rusty Elm Compiler"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.7.10"
